     (also make sure that there is not already a LUT selected in the backdrop settings when you take the screenshot in VP for the further tweaking)

  -> do not save the new LUT texture as jpg, but rather as lossless png or bmp!

- images/textures transparency is now -only- based on the alpha channel of the loaded images, no transparency color/hack support anymore

- EM Reels do not feature raw Text/Font input anymore, only Images (this was already unsupported in 9.9.X, but is now officially discarded)

- internal DMD support (access via script, input levels are 0..100)
  to display the DMD, use a TextBox with the magic keyword "DMD" as text
  to be able to connect to VPM, use a recent VPM (2.6 or newer) and a recent core.vbs (3.44 or newer) and follow the instructions there
- DMDWidth, DMDHeight, DMDPixels to steer the DMD added to Table Script methods

- improved smoothness for ramps (centripetal Catmull-Rom splines)
- ramps can now in addition use the height parameter of their control points (its used as an offset in addition to the normal ramp behaviour)
- in the editor: control points of ramps have a new read-only "Real Height" information. The "Height Offset" is just an offset for the current height. 
  E.g.: Top/Bottom height of the ramp is 100. If you add 25 to the "Height Offset" the "Real Height" shows 125. This is more important if you use a sloped 
  ramp with bottom height 0 and top height 60 and add new control points on the ramp. The height information is interpolated from one control point to the 
  next one, so the "Real Height" shows you this value and the "Height Offset" can be used to easily adjust the height.  
- changed opacity/transparency handling for ramps (Alpha/Acrylic have been deleted, only the material opacity value is supported now)
- the control point for the bottom ramp has a blue color to identify which side of the ramp is the bottom one
